--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -30,8 +30,8 @@
     <![endif]-->
 
     <!-- Required JS -->
-    <script src="/js/jquery.js"></script>
-    <script src="/js/jquery-ui.min.js"></script>
+    <script src="<%= CLOUDFRONT_HOST %>/js/jquery.js"></script>
+    <script src="<%= CLOUDFRONT_HOST %>/js/jquery-ui.min.js"></script>
 
     <!-- Page scripts -->
     <link rel="stylesheet" href="/assets/layerslider/css/layerslider.css" type="text/css">
@@ -58,7 +58,7 @@
 
                 <a class="navbar-brand" href="/home" title="Boomerang | One template. Infinite solutions">
 
-                    <img src="/images/ChangefinderLogo-blue.png"  alt="Changefindr">
+                    <img src="<%= CLOUDFRONT_HOST %>/images/ChangefinderLogo-blue.png"  alt="Changefindr">
                     
                    
                 </a>
