--- a/app/views/team/index.html.erb
+++ b/app/views/team/index.html.erb
@@ -65,7 +65,7 @@
                 <hr>
                 <div class="row ">  
                 	<div class="col-md-3">
-                		<img src="/images/prv/team/team-corporate-5.jpg" class="img-responsive" alt="">
+                		<img src="/images/SaulMigramPic.jpg" class="img-responsive" alt="">
                 	</div>
                 	<div class="col-md-9">
                 		<div class="row">
