--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -99,47 +99,47 @@ ul.ui-autocomplete {
 
 -->
 
-<script src="/js/modernizr.custom.js"></script>
-<script src="/assets/bootstrap/js/bootstrap.min.js"></script>
-<script src="/js/jquery.mousewheel-3.0.6.pack.js"></script>
-<script src="/js/jquery.easing.js"></script>
-<script src="/js/jquery.metadata.js"></script>
-<script src="/js/jquery.hoverup.js"></script>
-<script src="/js/jquery.hoverdir.js"></script>
-<script src="/js/jquery.stellar.js"></script>
+<script src="<%= CLOUDFRONT_HOST %>/js/modernizr.custom.js"></script>
+<script src="<%= CLOUDFRONT_HOST %>/assets/bootstrap/js/bootstrap.min.js"></script>
+<script src="<%= CLOUDFRONT_HOST %>/js/jquery.mousewheel-3.0.6.pack.js"></script>
+<script src="<%= CLOUDFRONT_HOST %>/js/jquery.easing.js"></script>
+<script src="<%= CLOUDFRONT_HOST %>/js/jquery.metadata.js"></script>
+<script src="<%= CLOUDFRONT_HOST %>/js/jquery.hoverup.js"></script>
+<script src="<%= CLOUDFRONT_HOST %>/js/jquery.hoverdir.js"></script>
+<script src="<%= CLOUDFRONT_HOST %>/js/jquery.stellar.js"></script>
 
 
 <!-- Boomerang mobile nav - Optional  -->
-<script src="/assets/responsive-mobile-nav/js/jquery.dlmenu.js"></script>
-<script src="/assets/responsive-mobile-nav/js/jquery.dlmenu.autofill.js"></script>
+<script src="<%= CLOUDFRONT_HOST %>/assets/responsive-mobile-nav/js/jquery.dlmenu.js"></script>
+<script src="<%= CLOUDFRONT_HOST %>/assets/responsive-mobile-nav/js/jquery.dlmenu.autofill.js"></script>
 
 <!-- Forms -->
-<script src="/assets/ui-kit/js/jquery.powerful-placeholder.min.js"></script> 
-<script src="/assets/ui-kit/js/cusel.min.js"></script>
-<script src="/assets/sky-forms/js/jquery.form.min.js"></script>
-<script src="/assets/sky-forms/js/jquery.validate.min.js"></script>
-<script src="/assets/sky-forms/js/jquery.maskedinput.min.js"></script>
-<script src="/assets/sky-forms/js/jquery.modal.js"></script>
+<script src="<%= CLOUDFRONT_HOST %>/assets/ui-kit/js/jquery.powerful-placeholder.min.js"></script> 
+<script src="<%= CLOUDFRONT_HOST %>/assets/ui-kit/js/cusel.min.js"></script>
+<script src="<%= CLOUDFRONT_HOST %>/assets/sky-forms/js/jquery.form.min.js"></script>
+<script src="<%= CLOUDFRONT_HOST %>/assets/sky-forms/js/jquery.validate.min.js"></script>
+<script src="<%= CLOUDFRONT_HOST %>/assets/sky-forms/js/jquery.maskedinput.min.js"></script>
+<script src="<%= CLOUDFRONT_HOST %>/assets/sky-forms/js/jquery.modal.js"></script>
 
 <!-- Assets -->
-<script src="/assets/hover-dropdown/bootstrap-hover-dropdown.min.js"></script>
-<script src="/assets/page-scroller/jquery.ui.totop.min.js"></script>
-<script src="/assets/mixitup/jquery.mixitup.js"></script>
-<script src="/assets/mixitup/jquery.mixitup.init.js"></script>
-<script src="/assets/fancybox/jquery.fancybox.pack.js?v=2.1.5"></script>
-<script src="/assets/waypoints/waypoints.min.js"></script>
-<script src="/assets/milestone-counter/jquery.countTo.js"></script>
-<script src="/assets/easy-pie-chart/js/jquery.easypiechart.js"></script>
-<script src="/assets/social-buttons/js/rrssb.min.js"></script>
-<script src="/assets/nouislider/js/jquery.nouislider.min.js"></script>
-<script src="/assets/owl-carousel/owl.carousel.js"></script>
-<script src="/assets/bootstrap/js/tooltip.js"></script>
-<script src="/assets/bootstrap/js/popover.js"></script>
+<script src="<%= CLOUDFRONT_HOST %>/assets/hover-dropdown/bootstrap-hover-dropdown.min.js"></script>
+<script src="<%= CLOUDFRONT_HOST %>/assets/page-scroller/jquery.ui.totop.min.js"></script>
+<script src="<%= CLOUDFRONT_HOST %>/assets/mixitup/jquery.mixitup.js"></script>
+<script src="<%= CLOUDFRONT_HOST %>/assets/mixitup/jquery.mixitup.init.js"></script>
+<script src="<%= CLOUDFRONT_HOST %>/assets/fancybox/jquery.fancybox.pack.js?v=2.1.5"></script>
+<script src="<%= CLOUDFRONT_HOST %>/assets/waypoints/waypoints.min.js"></script>
+<script src="<%= CLOUDFRONT_HOST %>/assets/milestone-counter/jquery.countTo.js"></script>
+<script src="<%= CLOUDFRONT_HOST %>/assets/easy-pie-chart/js/jquery.easypiechart.js"></script>
+<script src="<%= CLOUDFRONT_HOST %>/assets/social-buttons/js/rrssb.min.js"></script>
+<script src="<%= CLOUDFRONT_HOST %>/assets/nouislider/js/jquery.nouislider.min.js"></script>
+<script src="<%= CLOUDFRONT_HOST %>/assets/owl-carousel/owl.carousel.js"></script>
+<script src="<%= CLOUDFRONT_HOST %>/assets/bootstrap/js/tooltip.js"></script>
+<script src="<%= CLOUDFRONT_HOST %>/assets/bootstrap/js/popover.js"></script>
 
 <!-- Sripts for individual pages, depending on what plug-ins are used -->
-<script src="/assets/layerslider/js/greensock.js" type="text/javascript"></script>
-<script src="/assets/layerslider/js/layerslider.transitions.js" type="text/javascript"></script>
-<script src="/assets/layerslider/js/layerslider.kreaturamedia.jquery.js" type="text/javascript"></script>
+<script src="<%= CLOUDFRONT_HOST %>/assets/layerslider/js/greensock.js" type="text/javascript"></script>
+<script src="<%= CLOUDFRONT_HOST %>/assets/layerslider/js/layerslider.transitions.js" type="text/javascript"></script>
+<script src="<%= CLOUDFRONT_HOST %>/assets/layerslider/js/layerslider.kreaturamedia.jquery.js" type="text/javascript"></script>
 <!-- Initializing the slider -->
 <script>
     jQuery("#layerslider").layerSlider({
@@ -256,16 +256,16 @@ ul.ui-autocomplete {
 </script>
 
 <!-- Boomerang App JS -->
-<script src="/js/wp.app.js"></script>
+<script src="<%= CLOUDFRONT_HOST %>/js/wp.app.js"></script>
 <!--[if lt IE 9]>
-    <script src="/js/html5shiv.js"></script>
-    <script src="/js/respond.min.js"></script>
+    <script src="<%= CLOUDFRONT_HOST %>/js/html5shiv.js"></script>
+    <script src="<%= CLOUDFRONT_HOST %>/js/respond.min.js"></script>
 <![endif]-->
 
 <!-- Temp -- You can remove this once you started to work on your project -->
-<script src="/js/jquery.cookie.js"></script>
-<script src="/js/wp.switcher.js"></script>
-<script type="text/javascript" src="/js/wp.ga.js"></script>
+<script src="<%= CLOUDFRONT_HOST %>/js/jquery.cookie.js"></script>
+<script src="<%= CLOUDFRONT_HOST %>/js/wp.switcher.js"></script>
+<script type="text/javascript" src="<%= CLOUDFRONT_HOST %>/js/wp.ga.js"></script>
 
 
 
