--- a/app/views/sign_in/index.html.erb
+++ b/app/views/sign_in/index.html.erb
@@ -48,7 +48,7 @@
 
                             <div style="padding-top:20px; border-top: 1px solid #ccc;">
                              <h5 style="text-align:center">Or</h5>
-                                <a href="/auth/facebook" id="sign_in"><img alt="Facebook login button" border="0" src="/images/facebook-login-button.png" 
+                                <a href="/auth/facebook" id="sign_in"><img alt="Facebook login button" border="0" src="<%= CLOUDFRONT_HOST %>/images/facebook-login-button.png" 
                                 class="img-responsive img-rounded fill center-block"
                                 ></a>
                                 <br/>
