--- a/app/views/sign_up/index.html.erb
+++ b/app/views/sign_up/index.html.erb
@@ -93,7 +93,7 @@
                                                      <br/><br/><br/>
                                                      <h5>or</h5>
                                                         
-                                                        <a href="/auth/facebook" id="sign_in" onclick="acceptedTerms();"><img alt="Facebook login button" border="0" src="/images/facebook-register.png" 
+                                                        <a href="/auth/facebook" id="sign_in" onclick="acceptedTerms();"><img alt="Facebook login button" border="0" src="<%= CLOUDFRONT_HOST %>/images/facebook-register.png" 
                                                         class="img-responsive img-rounded fill center-block"
                                                         ></a>
 
