--- a/app/views/team/index.html.erb
+++ b/app/views/team/index.html.erb
@@ -15,7 +15,7 @@
             <div class="container">
                 <div class="row">  
                 	<div class="col-md-3">
-                		<img src="/images/prv/team/team-corporate-3.jpg" class="img-responsive" style="max-height:309px" alt="">
+                		<img src="<%= CLOUDFRONT_HOST %>/images/prv/team/team-corporate-3.jpg" class="img-responsive" style="max-height:309px" alt="">
                 	</div>
                 	<div class="col-md-9">
                 		<div class="row">
@@ -59,13 +59,13 @@
                 		
                 	</div>
                 	<div class="col-md-3">
-                		<img src="/images/VipulProfilePic.jpg" class="img-responsive" style="max-height:309px" alt="">
+                		<img src="<%= CLOUDFRONT_HOST %>/images/VipulProfilePic.jpg" class="img-responsive" style="max-height:309px" alt="">
                 	</div>
                 </div>
                 <hr>
                 <div class="row ">  
                 	<div class="col-md-3">
-                		<img src="/images/SaulMigramPic.jpg" class="img-responsive" alt="">
+                		<img src="<%= CLOUDFRONT_HOST %>/images/SaulMigramPic.jpg" class="img-responsive" alt="">
                 	</div>
                 	<div class="col-md-9">
                 		<div class="row">
