--- a/app/views/aboutus/index.html.erb
+++ b/app/views/aboutus/index.html.erb
@@ -19,7 +19,7 @@
                     </div>
                      <div class="col-md-5">
                         
-                            <img src="/images/prv/col-img-7.jpg" class="img-responsive"/>
+                            <img src="<%= CLOUDFRONT_HOST %>/images/prv/col-img-7.jpg" class="img-responsive"/>
                        
                     </div>
                     
