--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -247,7 +247,7 @@ ul.ui-autocomplete {
 
             return $('<li class="ui-menu-item-with-icon"></li>')
                 .data("item.ui-autocomplete", item.merchantname)
-                .append('<a><img src="' + item.logo + '"height="45px" width="75px">&nbsp;&nbsp;&nbsp;' + item.name + '</a>')
+                .append('<a><img src="<%= CLOUDFRONT_HOST %>/' + item.logo + '"height="45px" width="75px">&nbsp;&nbsp;&nbsp;' + item.name + '</a>')
                 .appendTo(ul);
         };
 
