modified for cloudfront host src

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -150,7 +150,7 @@
                                             <div class="col-md-3">
                                                 <div class="wp-block inverse">
                                                     <div class="figure" style="min-height:150px">
-                                                        <img alt="" src="<%= CLOUDFRONT_HOST %>/<%=@causes[i+k].logo.url%>" class="img-responsive"
+                                                        <img alt="" src="<%=@causes[i+k].logo.url%>" class="img-responsive"
                                                         style="margin: auto auto; height: auto; width: auto; max-height:150px; max-width:200px;" >
                                                         <div class="figcaption bg-base"></div>
                                                         <div class="figcaption-btn">
