--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -152,9 +152,9 @@
                                                     <div class="figure" style="min-height:150px">
                                                         <img alt="" src="<%= CLOUDFRONT_HOST %>/<%=@causes[i+k].logo.url%>" class="img-responsive"
                                                         style="margin: auto auto; height: auto; width: auto; max-height:150px; max-width:200px;" >
-                                                        <div class="figcaption bg-base"></div>
-                                                        <div class="figcaption-btn">
-                                                            blah
+                                                        <div class="figcaption bg-base">something</div>
+                                                        <div class="figcaption-btn" style="position:relative">
+                                                            
                                                             <a href="#" class="btn btn-xs btn-b-white"><i class="fa fa-credit-card"></i> Donate</a>
                                                             <a href="<%= "http://" +  @userhost + "/cause/show/" +  @causes[i+k].charityid.to_s %>" class="btn btn-xs btn-b-white"><i class="fa fa-plus-circle"></i> View Details</a>
                                                         </div>
